--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css" />
+    <script src="https://cdn.paritydeals.com/banner.js"></script>
   </head>
   <body>
     <header>
