--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
           </div>
         </div>
       </div>
+       <a href='http://www.freevisitorcounters.com'>more on freevisitorcounters.com</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=6e4d49066db5698346e42b55007030f0004ef975'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1293830/t/0"></script>
     </main>
 
     <footer class="text-body-secondary py-5">
