--- a/index.html
+++ b/index.html
@@ -134,15 +134,18 @@
           </div>
         </div>
       </div>
-       <a href='http://www.freevisitorcounters.com'>more on freevisitorcounters.com</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=6e4d49066db5698346e42b55007030f0004ef975'></script>
-<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1293830/t/0"></script>
     </main>
 
-    <footer class="text-body-secondary py-5">
-      <div class="container">
-        <p class="mb-1">Prashanth KS © 2025 - Bootstrap</p>
-      </div>
-    </footer>
+<footer class="text-body-secondary py-5">
+  <div class="container">
+    <p class="mb-1">Album example is © Bootstrap.</p>
+    <!-- Visitor Counter Code -->
+    <a href="http://www.freevisitorcounters.com">more on freevisitorcounters.com</a>
+    <script type="text/javascript" src="https://www.freevisitorcounters.com/auth.php?id=d510d9316b768650b8848ee463418cfb3e10ae72"></script>
+    <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1293834/t/2"></script>
+  </div>
+</footer>
+
 
     <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
