--- a/index.html
+++ b/index.html
@@ -137,14 +137,32 @@
     </main>
 
 <footer class="text-body-secondary py-5">
-  <div class="container">
-    <p class="mb-1">Album example is © Bootstrap.</p>
-    <!-- Visitor Counter Code -->
-    <a href="http://www.freevisitorcounters.com">more on freevisitorcounters.com</a>
-    <script type="text/javascript" src="https://www.freevisitorcounters.com/auth.php?id=d510d9316b768650b8848ee463418cfb3e10ae72"></script>
-    <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1293834/t/2"></script>
+  <div class="container text-center">
+    <p class="mb-1">Prashanth ks © Bootstrap.</p>
+
+    <!-- Profile Counter -->
+    <p id="visitor-counter" class="mt-3"></p>
+
+    <script>
+      // Initialize or update the counter in localStorage
+      const visitCountKey = "profileVisitCount";
+      const visitCount = localStorage.getItem(visitCountKey);
+
+      if (visitCount === null) {
+        // First-time visitor
+        localStorage.setItem(visitCountKey, 1);
+      } else {
+        // Increment counter for returning visitors
+        localStorage.setItem(visitCountKey, parseInt(visitCount) + 1);
+      }
+
+      // Display the counter
+      document.getElementById("visitor-counter").innerText =
+        "Profile visits: " + localStorage.getItem(visitCountKey);
+    </script>
   </div>
 </footer>
+
 
 
     <!-- Bootstrap JS Bundle -->
