--- a/index.html
+++ b/index.html
@@ -139,27 +139,8 @@
 <footer class="text-body-secondary py-5">
   <div class="container text-center">
     <p class="mb-1">Prashanth ks © Bootstrap.</p>
-
-    <!-- Profile Counter -->
-    <p id="visitor-counter" class="mt-3"></p>
-
-    <script>
-      // Initialize or update the counter in localStorage
-      const visitCountKey = "profileVisitCount";
-      const visitCount = localStorage.getItem(visitCountKey);
-
-      if (visitCount === null) {
-        // First-time visitor
-        localStorage.setItem(visitCountKey, 1);
-      } else {
-        // Increment counter for returning visitors
-        localStorage.setItem(visitCountKey, parseInt(visitCount) + 1);
-      }
-
-      // Display the counter
-      document.getElementById("visitor-counter").innerText =
-        "Profile visits: " + localStorage.getItem(visitCountKey);
-    </script>
+ <a href='http://www.freevisitorcounters.com'>Counters</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=b9ad76b567bbe175917e157b23e742f0412e5958'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1295169/t/2"></script>
   </div>
 </footer>
 
