--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css" />
-      </head>
+  </head>
   <body>
     <script src="https://cdn.paritydeals.com/banner.js"></script>
     <header>
@@ -58,7 +58,7 @@
             <div class="col">
               <div class="card shadow-sm">
                 <img
-                  src="./Assets/Slide 16_9 - 1.png"
+                  src="./Assets/portfolio.png"
                   alt="Placeholder"
                   class="bd-placeholder-img card-img-top"
                 />
@@ -83,7 +83,7 @@
             <div class="col">
               <div class="card shadow-sm">
                 <img
-                  src="./Assets/OG image.png"
+                  src="./Assets/social_icons.png"
                   alt="Placeholder"
                   class="bd-placeholder-img card-img-top"
                 />
@@ -111,7 +111,7 @@
             <div class="col">
               <div class="card shadow-sm">
                 <img
-                  src="./Assets/80shots_so.png"
+                  src="./Assets/instagram_icon.png"
                   alt="Placeholder"
                   class="bd-placeholder-img card-img-top"
                 />
@@ -136,15 +136,20 @@
       </div>
     </main>
 
-<footer class="text-body-secondary py-5">
-  <div class="container text-center">
-    <p class="mb-1">Prashanth ks © Bootstrap.</p>
- <a href='http://www.freevisitorcounters.com'>Counters</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=b9ad76b567bbe175917e157b23e742f0412e5958'></script>
-<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1295169/t/2"></script>
-  </div>
-</footer>
-
-
+    <footer class="text-body-secondary py-5">
+      <div class="container text-center">
+        <p class="mb-1">Prashanth ks © Bootstrap.</p>
+        <a href="http://www.freevisitorcounters.com">Counters</a>
+        <script
+          type="text/javascript"
+          src="https://www.freevisitorcounters.com/auth.php?id=b9ad76b567bbe175917e157b23e742f0412e5958"
+        ></script>
+        <script
+          type="text/javascript"
+          src="https://www.freevisitorcounters.com/en/home/counter/1295169/t/2"
+        ></script>
+      </div>
+    </footer>
 
     <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
