Love calculator added

--- a/index.html
+++ b/index.html
@@ -131,6 +131,31 @@
                 </div>
               </div>
             </div>
+
+            <!-- Card 4 -->
+            <div class="col">
+              <div class="card shadow-sm">
+                <img
+                  src="./Assets/Love_calculator.png"
+                  alt="Placeholder"
+                  class="bd-placeholder-img card-img-top"
+                />
+                <div class="card-body">
+                  <p class="card-text">Love Calculator 💖</p>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <div class="btn-group">
+                      <a
+                        href="https://iamprashanthks.github.io/Love-Calculator/"
+                        class="btn btn-primary my-2"
+                        >Download here</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
