Social media icons caption change

--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
                 />
                 <div class="card-body">
                   <p class="card-text">
-                    500+ Social Media Icons Pack – Your Ultimate Design
-                    Shortcut! 🚀
+                    500+ Social Media Icons Pack - 100% Free 🚀
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
