visit page for love calculator

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                       <a
                         href="https://iamprashanthks.github.io/Love-Calculator/"
                         class="btn btn-primary my-2"
-                        >Download here</a
+                        >Visit page ↗</a
                       >
                     </div>
                   </div>
