--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <footer class="text-body-secondary py-5">
       <div class="container text-center">
         <p class="mb-1">Prashanth ks © Bootstrap.</p>
-        <a href="http://www.freevisitorcounters.com">Counters</a>
+        <!-- <a href="http://www.freevisitorcounters.com">Counters</a>
         <script
           type="text/javascript"
           src="https://www.freevisitorcounters.com/auth.php?id=b9ad76b567bbe175917e157b23e742f0412e5958"
@@ -171,11 +171,11 @@
         <script
           type="text/javascript"
           src="https://www.freevisitorcounters.com/en/home/counter/1295169/t/2"
-        ></script>
+        ></script> -->
       </div>
     </footer>
 
     <!-- Bootstrap JS Bundle -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
