--- a/index.html
+++ b/index.html
@@ -11,6 +11,29 @@
     />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css" />
+
+    <!-- Open graph -->
+    <meta property="og:title" content="Prashanth's Bootstrap Resume" />
+    <meta
+      property="og:description"
+      content="A clean and modern Bootstrap-based resume by Prashanth."
+    />
+    <meta
+      property="og:image"
+      content="https://iamprashanthks.github.io/Prashanth-Bootstrap-Resume/og-image.jpg"
+    />
+    <meta
+      property="og:url"
+      content="https://iamprashanthks.github.io/Prashanth-Bootstrap-Resume/"
+    />
+    <meta property="og:type" content="website" />
+
+    <!-- Favicon -->
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://iamprashanthks.github.io/Prashanth-Bootstrap-Resume/favicon.png"
+    />
   </head>
   <body>
     <script src="https://cdn.paritydeals.com/banner.js"></script>
