removed old images

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <meta property="og:type" content="website" />
 
     <!-- Favicon -->
-    <link
+    <!-- <link
       rel="icon"
       type="image/png"
-      href="https://iamprashanthks.github.io/Prashanth-Bootstrap-Resume/favicon.png"
+      href="https://iamprashanthks.github.io/Prashanth-Bootstrap-Resume/favicon.png" -->
     />
   </head>
   <body>
