--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <section class="py-5 text-center container">
         <div class="row py-lg-5">
           <div class="col-lg-6 col-md-8 mx-auto">
-            <h1 class="fw-light">Prashanth ks</h1>
+            <h1 class="fw-bold">Prashanth ks</h1>
             <p class="lead text-muted">
               Hi there! I'm Prashanth, a passionate UX/UI designer who loves
               creating stunning websites, eye-catching graphics, and
@@ -73,7 +73,7 @@
           </div>
         </div>
       </section>
-
+      <h2 style="text-align: center">Free Resources & Tools</h2>
       <div class="album py-5 bg-light">
         <div class="container">
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
@@ -153,7 +153,6 @@
                 </div>
               </div>
             </div>
-
             <!-- Card 4 -->
             <div class="col">
               <div class="card shadow-sm">
