removed arrow in header

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <!-- <link
       rel="icon"
       type="image/png"
-      href="https://iamprashanthks.github.io/Prashanth-Bootstrap-Resume/favicon.png" -->
-    />
+      href="https://iamprashanthks.github.io/Prashanth-Bootstrap-Resume/favicon.png" 
+    />-->
   </head>
   <body>
     <script src="https://cdn.paritydeals.com/banner.js"></script>
