--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
 
     <footer class="text-body-secondary py-5">
       <div class="container text-center">
-        <p class="mb-1">Prashanth ks © Bootstrap.</p>
-        <a href="http://www.freevisitorcounters.com">Counters</a>
+        <p class="mb-1">Prashanth ks © 2025 | Made with Bootstrap.</p>
+        <!-- <a href="http://www.freevisitorcounters.com">Counters</a>
         <script
           type="text/javascript"
           src="https://www.freevisitorcounters.com/auth.php?id=b9ad76b567bbe175917e157b23e742f0412e5958"
@@ -193,7 +193,7 @@
         <script
           type="text/javascript"
           src="https://www.freevisitorcounters.com/en/home/counter/1295169/t/2"
-        ></script>
+        ></script> -->
       </div>
     </footer>
 
