--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
     <meta
       property="og:image"
-      content="https://iamprashanthks.github.io/Prashanth-Bootstrap-Resume/og-image.jpg"
+      content="https://github.com/iamprashanthks/Prashanth-Bootstrap-Resume/blob/6112b0990f3d20689b0c004e3eafaf66e46b995c/og_image.jpg"
     />
     <meta
       property="og:url"
