twitter og added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
     />
     <meta property="og:type" content="website" />
 
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Prashanth's Bootstrap Resume" />
+    <meta
+      name="twitter:description"
+      content="A clean and modern Bootstrap-based resume by Prashanth."
+    />
+    <meta
+      name="twitter:image"
+      content="https://github.com/iamprashanthks/Prashanth-Bootstrap-Resume/blob/6112b0990f3d20689b0c004e3eafaf66e46b995c/og_image.jpg"
+    />
+    <meta name="twitter:site" content="@Prashanth_Krsna" />
+    <!-- Replace with your Twitter username -->
+
     <!-- Favicon -->
     <!-- <link
       rel="icon"
