--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
     <meta
       property="og:image"
-      content="https://github.com/iamprashanthks/Prashanth-Bootstrap-Resume/blob/main/og_image.jpg"
+      content="https://raw.githubusercontent.com/iamprashanthks/Prashanth-Bootstrap-Resume/refs/heads/main/og_image.jpg"
     />
     <meta
       property="og:url"
@@ -37,7 +37,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://github.com/iamprashanthks/Prashanth-Bootstrap-Resume/blob/main/og_image.jpg"
+      content="https://raw.githubusercontent.com/iamprashanthks/Prashanth-Bootstrap-Resume/refs/heads/main/og_image.jpg"
     />
     <meta name="twitter:site" content="@Prashanth_Krsna" />
     <!-- Replace with your Twitter username -->
